# cosmo

./: .gitignore  README.md  pyproject.toml
cosmo/: __init__.py  docker-compose.yml
cosmo/wakeword/: Dockerfile  README.md  main.py  pyproject.toml  select_mic.py
docker/: .gitignore  README.md  compose.yaml
docker/homeassistant/: Dockerfile  entrypoint.sh
esphome/: cosmo.yaml
rock/: compose.yaml
src/cosmo/: main.py
